tests/ui/generator/auto-trait-regions.no_drop_tracking.stderr
error[E0277]: the trait bound `No: Foo` is not satisfied in `[generator@$DIR/auto-trait-regions.rs:47:15: 47:17]`
  --> $DIR/auto-trait-regions.rs:52:16
   |
LL |     let gen = || {
   |               -- within this `[generator@$DIR/auto-trait-regions.rs:47:15: 47:17]`
...
LL |     assert_foo(gen);
   |                ^^^ within `[generator@$DIR/auto-trait-regions.rs:47:15: 47:17]`, the trait `Foo` is not implemented for `No`
   |
note: generator does not implement `Foo` as this value is used across a yield
  --> $DIR/auto-trait-regions.rs:49:9
   |
LL |         let a = A(&mut true, &mut true, No);
   |                                         -- has type `No` which does not implement `Foo`
LL |         yield;
   |         ^^^^^ yield occurs here, with `No` maybe used later
LL |         assert_foo(a);
LL |     };
   |     - `No` is later dropped here
note: required by a bound in `assert_foo`
  --> $DIR/auto-trait-regions.rs:24:18
   |
LL | fn assert_foo<T: Foo>(f: T) {}
   |                  ^^^ required by this bound in `assert_foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
